<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.josemar.projetoagenda2015.PreferenciasActivity"

    android:background="@color/cardview_dark_background">
    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tela_pref_title"
        android:id="@+id/textViewTelaPrefTitle"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tela_pref_estilos"
        android:id="@+id/textViewTelaPrefEstilos"
        android:layout_below="@+id/textViewTelaPrefTitle"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_rock"
        android:id="@+id/checkBoxRock"
        android:layout_below="@+id/textViewTelaPrefEstilos"
        android:checked="false"
        android:layout_toRightOf="@+id/section_label"
        android:layout_alignRight="@+id/textViewTelaPrefEstilos"
        android:layout_alignEnd="@+id/textViewTelaPrefEstilos"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_mpb"
        android:id="@+id/checkBoxMPB"
        android:layout_below="@+id/checkBoxRock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignRight="@+id/checkBoxRock"
        android:layout_alignEnd="@+id/checkBoxRock"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_samba"
        android:id="@+id/checkBoxSamba"
        android:layout_below="@+id/checkBoxMPB"
        android:layout_alignRight="@+id/checkBoxMPB"
        android:layout_alignEnd="@+id/checkBoxMPB"
        android:checked="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_forro"
        android:id="@+id/checkBoxForro"
        android:layout_below="@+id/checkBoxSamba"
        android:layout_alignRight="@+id/checkBoxSamba"
        android:layout_alignEnd="@+id/checkBoxSamba"
        android:checked="false"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_sertanejo"
        android:id="@+id/checkBoxSertanejo"
        android:layout_below="@+id/checkBoxForro"
        android:layout_alignRight="@+id/checkBoxForro"
        android:layout_alignEnd="@+id/checkBoxForro"
        android:checked="false"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_eletronica"
        android:id="@+id/checkBoxEletronica"
        android:checked="false"
        android:textColor="@color/colorTextPrimary"
        android:layout_above="@+id/checkBoxAxe"
        android:layout_toRightOf="@+id/buttonTelaPrefSalvar"
        android:layout_toEndOf="@+id/buttonTelaPrefSalvar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_axe"
        android:id="@+id/checkBoxAxe"
        android:layout_alignTop="@+id/checkBoxMPB"
        android:layout_alignLeft="@+id/checkBoxEletronica"
        android:layout_alignStart="@+id/checkBoxEletronica"
        android:checked="false"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_funk"
        android:id="@+id/checkBoxFunk"
        android:layout_below="@+id/checkBoxAxe"
        android:layout_alignLeft="@+id/checkBoxAxe"
        android:layout_alignStart="@+id/checkBoxAxe"
        android:checked="false"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_country"
        android:id="@+id/checkBoxCountry"
        android:layout_below="@+id/checkBoxFunk"
        android:layout_alignLeft="@+id/checkBoxFunk"
        android:layout_alignStart="@+id/checkBoxFunk"
        android:checked="false"
        android:textColor="@color/colorTextPrimary" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_gospel"
        android:id="@+id/checkBoxGospel"
        android:layout_alignTop="@+id/checkBoxSertanejo"
        android:layout_alignLeft="@+id/checkBoxCountry"
        android:layout_alignStart="@+id/checkBoxCountry"
        android:checked="false"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tela_pref_notificacoes"
        android:id="@+id/textViewNotificacoes"
        android:layout_below="@+id/checkBoxSertanejo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_notif_diaria"
        android:id="@+id/radioButtonDiaria"
        android:checked="false"
        android:textColor="@color/colorTextPrimary"
        android:layout_below="@+id/textViewNotificacoes"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_notif_semanal"
        android:id="@+id/radioButtonSemanal"
        android:checked="true"
        android:textColor="@color/colorTextPrimary"
        android:layout_below="@+id/radioButtonDiaria"
        android:layout_alignLeft="@+id/radioButtonDiaria"
        android:layout_alignStart="@+id/radioButtonDiaria" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_notif_mensal"
        android:id="@+id/radioButtonMensal"
        android:checked="false"
        android:layout_below="@+id/radioButtonSemanal"
        android:layout_alignLeft="@+id/radioButtonSemanal"
        android:layout_alignStart="@+id/radioButtonSemanal"
        android:textColor="@color/colorTextPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_pref_btn_salvar"
        android:id="@+id/buttonTelaPrefSalvar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorTextPrimary"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>
